argocd-app-of-apps/argocd-configs/kong-gateway/kong-gw-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  namespace: gateway-api
  name: kong-gw-class
  annotations:
    konghq.com/gatewayclass-unmanaged: "true"

spec:
  controllerName: konghq.com/kic-gateway-controller
