argocd-app-of-apps/argocd-configs/kong-gateway/kong-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kong-gateway
  namespace: gateway-api
spec:
  gatewayClassName: kong-gw-class
  listeners:
    - name: proxy
      port: 80
      protocol: HTTP
